add h1 a text shadow and add a box shadow to popup class

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@
   /* shadows */
   --highlight-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.7);
   --screen-shadow: 0 0 50px 20px rgba(255, 255, 255, 0.7);
+  --heading-txt-shadow: #fc0 1px 0 10px;
 
   /* Dimensions */
   --cinema-width: 600px;
@@ -36,6 +37,7 @@ body {
 
 h1 {
   text-align: center;
+  text-shadow: var(--heading-txt-shadow);
 }
 
 .cinema {
@@ -85,6 +87,7 @@ table {
   padding: 1.4rem;
 
   border-radius: var(--popup-radius);
+  box-shadow: var(--highlight-shadow);
 }
 
 .popup .btn-close {
